--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Moshate Medical Centre | Akasia, Pretoria</title>
-    <meta name="description" content="Your local health partner in Akasia. GP, Pharmacy, Dental, Physio and Clinic services." />
+    <meta
+      name="description"
+      content="Your local health partner in Akasia. GP, Pharmacy, Dental, Physio and Clinic services."
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
